clarifications to first part

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -8,82 +8,78 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
--   [Exploration of the Formative Learning Design
-    Process](#exploration-of-the-formative-learning-design-process)
-    -   [Research Questions - April
-        2024](#research-questions---april-2024)
-    -   [A note on style](#a-note-on-style)
-    -   [Chapter Introduction](#chapter-introduction)
-    -   [Analysis of dimensions of game making activity using 3GAT
-        framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework)
-        -   [Description of interacting systems of activity illustrated
-            using the
-            vignette](#description-of-interacting-systems-of-activity-illustrated-using-the-vignette)
-            -   [Environmental factors and
-                objectives](#environmental-factors-and-objectives)
-            -   [Making games for an
-                audience](#making-games-for-an-audience)
-            -   [Constructing a game feature by
-                feature](#constructing-a-game-feature-by-feature)
-            -   [Smaller objectives and actions - Implementing discrete
-                code and design
-                structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
-            -   [Applying activity theory to surface contradictions and
-                design tensions experienced by participants and
-                facilitator/s](#applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
-    -   [Contradictions involving the use of game programming and asset
-        authoring
-        tools](#contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
-        -   [Design choices of the starter game
-            template](#design-choices-of-the-starter-game-template)
-            -   [Structural design of the game
-                template](#structural-design-of-the-game-template)
-            -   [Variable editing for player
-                movement](#variable-editing-for-player-movement)
-            -   [Level design and
-                prototyping](#level-design-and-prototyping)
-        -   [Design adaptations to facilitate novice use of a code
-            playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
-            -   [Remixing and community
-                inspiration](#remixing-and-community-inspiration)
-            -   [Addressing code syntax
-                errors](#addressing-code-syntax-errors)
-            -   [Distributed vs. self-contained approaches to asset
-                creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
-        -   [Observations on the game template and core
-            tools](#observations-on-the-game-template-and-core-tools)
-    -   [Participant conflict associated with project navigation and use
-        of
-        documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
-        -   [Quick Start Cards](#quick-start-cards)
-        -   [Code snippet examples](#code-snippet-examples)
-        -   [Structuring instructional tutorial
-            chapters](#structuring-instructional-tutorial-chapters)
-        -   [Theming the a collection of game design patterns to aid
-            navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
-    -   [Responding to tensions and barriers in cultural aspects of the
-        game making
-        activity](#responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
-        -   [Conflicts due to identity clashes and dysfunctional group
-            work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
-        -   [REMOVED](#removed)
-        -   [On a drama processes](#on-a-drama-processes)
-            -   [A game encouraging maker / player
-                types](#a-game-encouraging-maker-player-types)
-            -   [Description drama process using extracts from vignettes
-                and concepts of
-                MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe)
-            -   [Use of side missions to encourage varied creative
-                practices](#use-of-side-missions-to-encourage-varied-creative-practices)
-            -   [Observations on written interactions with the alien in
-                the
-                drama](#observations-on-written-interactions-with-the-alien-in-the-drama)
-            -   [Concluding remarks on process
-                drama](#concluding-remarks-on-process-drama)
-    -   [Chapter Discussion](#chapter-discussion)
-        -   [Summary of barriers and tensions explored in this
-            chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
-        -   [Link to next chapter](#link-to-next-chapter)
+-   [Research Questions - April
+    2024](#research-questions---april-2024){#toc-research-questions---april-2024}
+-   [A note on style](#a-note-on-style){#toc-a-note-on-style}
+-   [Chapter
+    Introduction](#chapter-introduction){#toc-chapter-introduction}
+-   [Analysis of dimensions of game making activity using 3GAT
+    framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework){#toc-analysis-of-dimensions-of-game-making-activity-using-3gat-framework}
+    -   [Environmental factors and
+        objectives](#environmental-factors-and-objectives){#toc-environmental-factors-and-objectives}
+    -   [Making games for an
+        audience](#making-games-for-an-audience){#toc-making-games-for-an-audience}
+    -   [Constructing a game feature by
+        feature](#constructing-a-game-feature-by-feature){#toc-constructing-a-game-feature-by-feature}
+    -   [Smaller objectives and actions - Implementing discrete code and
+        design
+        structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures){#toc-smaller-objectives-and-actions---implementing-discrete-code-and-design-structures}
+        -   [Applying activity theory to surface contradictions and
+            design tensions experienced by participants and
+            facilitator/s](#applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators){#toc-applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators}
+-   [Contradictions involving the use of game programming and asset
+    authoring
+    tools](#contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools){#toc-contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools}
+    -   [Using a starter game
+        template](#using-a-starter-game-template){#toc-using-a-starter-game-template}
+        -   [Variable editing for player
+            movement](#variable-editing-for-player-movement){#toc-variable-editing-for-player-movement}
+        -   [Level design and
+            prototyping](#level-design-and-prototyping){#toc-level-design-and-prototyping}
+    -   [Design adaptations to facilitate novice use of a code
+        playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground){#toc-design-adaptations-to-facilitate-novice-use-of-a-code-playground}
+        -   [Remixing and community
+            inspiration](#remixing-and-community-inspiration){#toc-remixing-and-community-inspiration}
+        -   [Addressing code syntax
+            errors](#addressing-code-syntax-errors){#toc-addressing-code-syntax-errors}
+        -   [Distributed vs. self-contained approaches to asset
+            creation](#distributed-vs.-self-contained-approaches-to-asset-creation){#toc-distributed-vs.-self-contained-approaches-to-asset-creation}
+    -   [Observations on the game template and core
+        tools](#observations-on-the-game-template-and-core-tools){#toc-observations-on-the-game-template-and-core-tools}
+-   [Participant conflict associated with project navigation and use of
+    documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation){#toc-participant-conflict-associated-with-project-navigation-and-use-of-documentation}
+    -   [Quick Start Cards](#quick-start-cards){#toc-quick-start-cards}
+    -   [Code snippet
+        examples](#code-snippet-examples){#toc-code-snippet-examples}
+    -   [Structuring instructional tutorial
+        chapters](#structuring-instructional-tutorial-chapters){#toc-structuring-instructional-tutorial-chapters}
+    -   [Theming the a collection of game design patterns to aid
+        navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation){#toc-theming-the-a-collection-of-game-design-patterns-to-aid-navigation}
+-   [Responding to tensions and barriers in cultural aspects of the game
+    making
+    activity](#responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity){#toc-responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity}
+    -   [Conflicts due to identity clashes and dysfunctional group
+        work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work){#toc-conflicts-due-to-identity-clashes-and-dysfunctional-group-work}
+    -   [REMOVED](#removed){#toc-removed}
+    -   [On a drama
+        processes](#on-a-drama-processes){#toc-on-a-drama-processes}
+        -   [A game encouraging maker / player
+            types](#a-game-encouraging-maker-player-types){#toc-a-game-encouraging-maker-player-types}
+        -   [Description drama process using extracts from vignettes and
+            concepts of
+            MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe){#toc-description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe}
+        -   [Use of side missions to encourage varied creative
+            practices](#use-of-side-missions-to-encourage-varied-creative-practices){#toc-use-of-side-missions-to-encourage-varied-creative-practices}
+        -   [Observations on written interactions with the alien in the
+            drama](#observations-on-written-interactions-with-the-alien-in-the-drama){#toc-observations-on-written-interactions-with-the-alien-in-the-drama}
+        -   [Concluding remarks on process
+            drama](#concluding-remarks-on-process-drama){#toc-concluding-remarks-on-process-drama}
+-   [Chapter Discussion](#chapter-discussion){#toc-chapter-discussion}
+    -   [Summary of barriers and tensions explored in this
+        chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter){#toc-summary-of-barriers-and-tensions-explored-in-this-chapter}
+    -   [Link to next
+        chapter](#link-to-next-chapter){#toc-link-to-next-chapter}
+
 # Exploration of the Formative Learning Design Process
 
 ## Research Questions - April 2024
@@ -236,9 +232,8 @@ However in its styling it is playful and editorial picks and write up celebrate 
 
 <!-- The tool shown in screenshots is the code playground glitch (see chapter 2 and glossary). -->
 
-### Description of interacting systems of activity illustrated using the vignette
 
-In line with the process outlined in chapter 3, the following sections outline different scopes of activity, at times using detail from the vignette above, to describe the activity of participants and to introduce tensions between system elements which are explored in this chapter.
+In line with the process outlined in chapter 3, the following sections outline different scopes of activity, at times using detail from vignettes described in the appendix to describe the activity of participants and to introduce tensions between system elements which are explored in this chapter.
 
 <!-- I use concepts from activity theory to describe elements of the activity system and identify intersecting or nested systems of activity and their differing goals. -->
 
@@ -252,22 +247,26 @@ Subsequent analysis of the identified activity systems allows both the researche
 
 <!-- A short description of the activity systems follows the vignette above to help the reader establish a broad understanding of the processes involved before further analysis. I signpost the reader to other chapters when the described activity is explored in more detail there. -->
 
-#### Environmental factors and objectives
+### Environmental factors and objectives
 
 In socio-cultural approaches is it important to situate the context of the learning environment within wider systems of activity. In line with Engestrom's concept of shared object explored in the previous chapter [@engestrom_expansive_2001], I have selected several relevant systems and represented them in an illustration 4.x  below.
 
-These include: research goals on the part of the researcher/ participant; desire to create a useful learning experience on the part of student helpers; learning computing skills and concepts as a home education project; participating with other home educators in a creative environment and thus building team and communication skills; and finally a broad aim of fun on the part of the children participants.
-
 <!-- NOTE THERE IS A MISMATCH BETWEEN DIAGRAM AND THE OBJECTIVES - CHOOSE ONE - AND MAKE IT CLEAR -->
+
+This diagram is necessary simplification of contextual factors and objectives of interacting, focusing on research goals on the part of the researcher, learning computing skills and concepts as a home education project and finally a broad aim of fun on the part of the children participants. In the previous chapter we explored the technique of describing a shared object. The utility of this approach is to acknowledge and represent the diverse cultural contextual factors that are played out in a new space between diverse actors with different agendas.
+
+
+<!--
+Other relevant objectives of re include: a desire to create a useful learning experience on the part of student helpers; participating with other home educators in a creative environment and thus building team and communication skills;. -->
+
+<!-- NOTE MOVE PREVIOUS Chapter?  -->
+
 
 ![Illustration 4.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v2.png){width=95%}
 
-In this research I take the approach of treating this shared object as an activity system in its own right.
+In this research I take the approach of treating this shared object as an activity system in its own right. Lecusay takes a similar approach [@lecusay_telementoring_2015] and describes the shared object as an ideocultural hybrid which develops into its own activity system. The concept of ideoculture is used in this study  to deepen the description of the community dimension of 3GAT.
 
-<!-- NOTE MOVE PREVIOUS Chapter?  -->
-Lecusay takes a similar approach [@lecusay_telementoring_2015]  and describes the shared object as an ideocultural hybrid which develops into its own activity system.
-
-
+<!-- NOTE - WHY IS THE CONCEPT OF IDEOCULTURE USEFUL HERE? -->
 
 
 <!-- NOTE - CAN ADD THE OBJECTIVES / LEADING ACTIVITIES INTO THE ARROWS ON THE DIAGRAM -->
@@ -288,9 +287,12 @@ Lecusay takes a similar approach [@lecusay_telementoring_2015]  and describes th
 Table 4.x.  Tools used in larger-scoped objective involving the wider community of notice coders collectively making separate games. -->
 
 
-#### Making games for an audience
+Following Barab's description of nested activity systems [-@barab_using_2002], this shared system, whose objective is to make a games for an audience to play,  can be seen not only as nested within the wider systems but also as a container for  other  activity systems nested with that. While this overall approach is considered valid [FIND OTHER SUPPORT], the danger of fragmenting activity to much is to make matters confusing. The job of the researcher is to prioritise systems to describe and analyse based on the area of study and the concerns of the participants. This prioritisation in AT is sometimes conceptualised as the process of finding a key units of analysis. In the process of research I have found two units of activity particularly illuminating, one being the shared activity system described above of making a game in a community process. The other, narrower in scope can be described as implementing individual game features. Beyond these key systems, I draw on the concepts of actions and operations within systems to describe tensions and contradictions which emerge in the research process [-@leontiev_activity_2009].
 
-The broader activity system whose object was the game making programme had a shared objective of making entertaining and educational games for an audience to play.  
+<!-- GDPs ( conceptualised here as game design patterns), which while often implemented on an individual or pair scope, were also fed back into community activity.  -->
+
+### Broader activity system - a novice game making community making games as a learning experience
+
 
 <!-- NOTE - what is the difference between objective and outcome -->
 
@@ -304,24 +306,24 @@ There are diverse end audiences for the games. The final target audience are stu
 
 ![Carrot eater game with an self made arcade box made from cardboard](./Pictures/carroteater3.jpg){width=75%}
 
-While the broad aim of making a game to share is tacitly agreed through participation, there are also diverse motivations stemming from environmental factors in the interrelated actors in this activity which bleed into the tensions which emerge at this level.
+While the broad aim of making a game to share is tacitly agreed through participation, there are also diverse motivations stemming from environmental factors in the interrelated actors in this activity which feed into the contradictions which emerge at this level of activity.
+
+#### Illustrative vignette on participants activity indicating general activity of participants
 
 
+The purpose of this vignette is to illustrate some of the key features of the overall game making activity in relation to activity systems and relevant system elements. (included as an appendix of this chapter as Appendix 4.a -
+[Link to online version here](https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit))
 
-*Illustrative vignette one participants activity indicating general activity of participants*
+The participant, a child Toby, has been working independently on the design of a platform game for several minutes of the session. As a facilitator, I draw the participants attention to the showcasing of their games to an external audience to focus their attention on completion of their games. Toby pays close attention to the challenge and variety of the game playing experience for his imagined audience of players. During the course of the session Toby invites many other group members to play his game. He initiates and responds to conversations around the difficultly of the game he has designed. The more immediate audience of his peers is clearly important to him in guiding his actions.
 
-In the vignette and surrounding data, Toby pays close attention to the challenge and variety of the game playing experience for his projected audience of players. In the vignette above, I draw the participants attention to the showcasing of their games to an external audience. Toby begins the session playing his own game. During the course of this session he invites many other group members to play his game. He initiates and responds to conversations around the difficultly of the game he has designed.
+He uses a variety of tools in the process of coding and testing his game including: a web based coding tool (code playground), a game template which he has used as the base of his game project and,  a menu of documentation linking to code examples and tutorials test    
 
-EDIT WITH ABOVE
-The purpose of this vignette is to illustrate some of the key features of the overall game making activity in context. The following vignette, consisting of extracts of participant activity over tweood bunch of phones to be worked on too in our devices
-cupboard if anyone fancies giving some a go today. I'll be there from
-11.30 todaynty minutes of a session in P2 (see below), shows activity happening at different scopes of activity. The participant, a child Toby, has been working independently on the design of a platform game for the first fifteen minutes of the session. Some specialist terms are used in the vignette which are explained in more detail in this chapter and in the glossary.
+While this vignette shows that the participant has developed fluid use of both software tools and documentation and support sources, these are areas where significant contradictions emerged which shaped the path of the support given. Contradictions concerned with use of core tools and additional documentation and support are explored in two later sections of this chapter.
 
-The vignette is included as an appendix of this chapter as Appendix 4.a -
-[Link to online version here](https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit)
+The later section of the vignette shows evidence of elements of an emerging ideoculture of this group. A student helper shares a question -  "Is yours the one where level one is harder than level three?". This is indicative of some of the emerging playful approaches that younger participants in particular are taking to the overall process. This represents an example of the influence of the wider systems of play of
 
 
-IS THIS NEEDED? While the programme had a shared objective of making a game, there were tensions brought by the cultural factors and other objectives imported from other activity systems. The third contradiction explored in this chapter explores those tensions (including? ....).
+<!-- IS THIS NEEDED? While the programme had a shared objective of making a game, there were tensions brought by the cultural factors and other objectives imported from other activity systems. The third contradiction explored in this chapter explores those tensions (including? ....). -->
 
 
 <!-- In the vignette of Toby's activity this wider objective is present in the facilitator orientation at the start which references this audience -  _the Monday after we can play our games and we can share them with students. We can make the students frustrated when they can’t beat our games_. At the end of the vignette text, one of the student helpers also imagines this audience playing the game of Toby.    -->
@@ -329,7 +331,7 @@ IS THIS NEEDED? While the programme had a shared objective of making a game, the
 NOTE - More on large scope in AT terms? What is needed here? -->
 
 
-#### Constructing a game feature by feature
+### Constructing a game feature by feature
 
 Within the activity system of making a game, in analsis of video data and evolution of course resources from P2 onwards, I identified activity happening at an individual or pair work which emerged with disctinctive characteristics.
 
@@ -337,9 +339,6 @@ Activity was driven by learners setting goals, requesting help and then implemen
 
 While is it possible, aligning with Levontev, to identify the implemenation of features as actions withing the wider activity, there is value in  treating of implementing each GDP as a sub-project or activity systems in its own right ( NOTE - or at least as as a key unit of analysis). Barab and colleagues justify smaller units in their study observing emerging practices in a technology rich learning environment [@barab_using_2002].
 QUOTE?
-
-
-
 
 
 
@@ -408,7 +407,7 @@ A later section of this chapter details the different supporting documentation g
 
 <!-- Table 4.x.  Tools used in lower-level objectives of implementing specific code structures or stages in creating game assets -->
 
-#### Smaller objectives and actions - Implementing discrete code and design structures
+### Smaller objectives and actions - Implementing discrete code and design structures
 
 <!-- For example, creating a new graphical element in a separate online pixel-art editor called Piskel, exporting and downloading it to the laptop, and uploading it to the glitch code playground and then making code changes in several parts of the code to initialise and implement new behaviour for this element. -->
 
