--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -1,76 +1,71 @@
--   [Exploration of the Formative Learning Design
-    Process](#exploration-of-the-formative-learning-design-process)
-    -   [Research Questions - April
-        2024](#research-questions---april-2024)
-    -   [A note on style](#a-note-on-style)
-    -   [Chapter Introduction](#chapter-introduction)
-    -   [Analysis of dimensions of game making activity using 3GAT
-        framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework)
-        -   [Description of interacting systems of activity illustrated
-            using the
-            vignette](#description-of-interacting-systems-of-activity-illustrated-using-the-vignette)
-            -   [Environmental factors and
-                objectives](#environmental-factors-and-objectives)
-            -   [Making games for an
-                audience](#making-games-for-an-audience)
-            -   [Constructing a game feature by
-                feature](#constructing-a-game-feature-by-feature)
-            -   [Smaller objectives and actions - Implementing discrete
-                code and design
-                structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
-            -   [Applying activity theory to surface contradictions and
-                design tensions experienced by participants and
-                facilitator/s](#applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
-    -   [Contradictions involving the use of game programming and asset
-        authoring
-        tools](#contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
-        -   [Design choices of the starter game
-            template](#design-choices-of-the-starter-game-template)
-            -   [Structural design of the game
-                template](#structural-design-of-the-game-template)
-            -   [Variable editing for player
-                movement](#variable-editing-for-player-movement)
-            -   [Level design and
-                prototyping](#level-design-and-prototyping)
-        -   [Design adaptations to facilitate novice use of a code
-            playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
-            -   [Remixing and community
-                inspiration](#remixing-and-community-inspiration)
-            -   [Addressing code syntax
-                errors](#addressing-code-syntax-errors)
-            -   [Distributed vs. self-contained approaches to asset
-                creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
-        -   [Observations on the game template and core
-            tools](#observations-on-the-game-template-and-core-tools)
-    -   [Participant conflict associated with project navigation and use
-        of
-        documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
-        -   [Quick Start Cards](#quick-start-cards)
-        -   [Code snippet examples](#code-snippet-examples)
-        -   [Structuring instructional tutorial
-            chapters](#structuring-instructional-tutorial-chapters)
-        -   [Theming the a collection of game design patterns to aid
-            navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
-    -   [Responding to tensions and barriers in cultural aspects of the
-        game making
-        activity](#responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
-        -   [Conflicts due to identity clashes and dysfunctional group
-            work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
-        -   [REMOVED](#removed)
-        -   [On a drama processes](#on-a-drama-processes)
-            -   [A game encouraging maker / player
-                types](#a-game-encouraging-maker-player-types)
-            -   [Description drama process using extracts from vignettes
-                and concepts of
-                MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe)
-            -   [Use of side missions to encourage varied creative
-                practices](#use-of-side-missions-to-encourage-varied-creative-practices)
-            -   [Observations on written interactions with the alien in
-                the
-                drama](#observations-on-written-interactions-with-the-alien-in-the-drama)
-            -   [Concluding remarks on process
-                drama](#concluding-remarks-on-process-drama)
-    -   [Chapter Discussion](#chapter-discussion)
-        -   [Summary of barriers and tensions explored in this
-            chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
-        -   [Link to next chapter](#link-to-next-chapter)
+-   [Research Questions - April
+    2024](#research-questions---april-2024){#toc-research-questions---april-2024}
+-   [A note on style](#a-note-on-style){#toc-a-note-on-style}
+-   [Chapter
+    Introduction](#chapter-introduction){#toc-chapter-introduction}
+-   [Analysis of dimensions of game making activity using 3GAT
+    framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework){#toc-analysis-of-dimensions-of-game-making-activity-using-3gat-framework}
+    -   [Environmental factors and
+        objectives](#environmental-factors-and-objectives){#toc-environmental-factors-and-objectives}
+    -   [Making games for an
+        audience](#making-games-for-an-audience){#toc-making-games-for-an-audience}
+    -   [Constructing a game feature by
+        feature](#constructing-a-game-feature-by-feature){#toc-constructing-a-game-feature-by-feature}
+    -   [Smaller objectives and actions - Implementing discrete code and
+        design
+        structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures){#toc-smaller-objectives-and-actions---implementing-discrete-code-and-design-structures}
+        -   [Applying activity theory to surface contradictions and
+            design tensions experienced by participants and
+            facilitator/s](#applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators){#toc-applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators}
+-   [Contradictions involving the use of game programming and asset
+    authoring
+    tools](#contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools){#toc-contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools}
+    -   [Using a starter game
+        template](#using-a-starter-game-template){#toc-using-a-starter-game-template}
+        -   [Variable editing for player
+            movement](#variable-editing-for-player-movement){#toc-variable-editing-for-player-movement}
+        -   [Level design and
+            prototyping](#level-design-and-prototyping){#toc-level-design-and-prototyping}
+    -   [Design adaptations to facilitate novice use of a code
+        playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground){#toc-design-adaptations-to-facilitate-novice-use-of-a-code-playground}
+        -   [Remixing and community
+            inspiration](#remixing-and-community-inspiration){#toc-remixing-and-community-inspiration}
+        -   [Addressing code syntax
+            errors](#addressing-code-syntax-errors){#toc-addressing-code-syntax-errors}
+        -   [Distributed vs. self-contained approaches to asset
+            creation](#distributed-vs.-self-contained-approaches-to-asset-creation){#toc-distributed-vs.-self-contained-approaches-to-asset-creation}
+    -   [Observations on the game template and core
+        tools](#observations-on-the-game-template-and-core-tools){#toc-observations-on-the-game-template-and-core-tools}
+-   [Participant conflict associated with project navigation and use of
+    documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation){#toc-participant-conflict-associated-with-project-navigation-and-use-of-documentation}
+    -   [Quick Start Cards](#quick-start-cards){#toc-quick-start-cards}
+    -   [Code snippet
+        examples](#code-snippet-examples){#toc-code-snippet-examples}
+    -   [Structuring instructional tutorial
+        chapters](#structuring-instructional-tutorial-chapters){#toc-structuring-instructional-tutorial-chapters}
+    -   [Theming the a collection of game design patterns to aid
+        navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation){#toc-theming-the-a-collection-of-game-design-patterns-to-aid-navigation}
+-   [Responding to tensions and barriers in cultural aspects of the game
+    making
+    activity](#responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity){#toc-responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity}
+    -   [Conflicts due to identity clashes and dysfunctional group
+        work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work){#toc-conflicts-due-to-identity-clashes-and-dysfunctional-group-work}
+    -   [REMOVED](#removed){#toc-removed}
+    -   [On a drama
+        processes](#on-a-drama-processes){#toc-on-a-drama-processes}
+        -   [A game encouraging maker / player
+            types](#a-game-encouraging-maker-player-types){#toc-a-game-encouraging-maker-player-types}
+        -   [Description drama process using extracts from vignettes and
+            concepts of
+            MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe){#toc-description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe}
+        -   [Use of side missions to encourage varied creative
+            practices](#use-of-side-missions-to-encourage-varied-creative-practices){#toc-use-of-side-missions-to-encourage-varied-creative-practices}
+        -   [Observations on written interactions with the alien in the
+            drama](#observations-on-written-interactions-with-the-alien-in-the-drama){#toc-observations-on-written-interactions-with-the-alien-in-the-drama}
+        -   [Concluding remarks on process
+            drama](#concluding-remarks-on-process-drama){#toc-concluding-remarks-on-process-drama}
+-   [Chapter Discussion](#chapter-discussion){#toc-chapter-discussion}
+    -   [Summary of barriers and tensions explored in this
+        chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter){#toc-summary-of-barriers-and-tensions-explored-in-this-chapter}
+    -   [Link to next
+        chapter](#link-to-next-chapter){#toc-link-to-next-chapter}
