on discussion structure and linkages

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -320,7 +320,7 @@ He uses a variety of tools in the process of coding and testing his game includi
 
 While this vignette shows that the participant has developed fluid use of both software tools and documentation and support sources, these are areas where significant contradictions emerged which shaped the path of the support given. Contradictions concerned with use of core tools and additional documentation and support are explored in two later sections of this chapter.
 
-The later section of the vignette shows evidence of elements of an emerging ideoculture of this group. A student helper shares a question -  "Is yours the one where level one is harder than level three?". This is indicative of some of the emerging playful approaches that younger participants in particular are taking to the overall process. This represents an example of the influence of the wider systems of play of
+The later section of the vignette shows evidence of elements of an emerging ideoculture of this group. A student helper shares a question -  "Is yours the one where level one is harder than level three?". This is indicative of some of the emerging playful approaches that younger participants in particular are taking to the overall process. This represents an example of the influence of the wider systems of play of on the shared ideoculture of the game making commmunity. The complexities of processes to create adn to help resolve contradictions as this cultural domain of collective making are explored later in this chapter.
 
 
 <!-- IS THIS NEEDED? While the programme had a shared objective of making a game, there were tensions brought by the cultural factors and other objectives imported from other activity systems. The third contradiction explored in this chapter explores those tensions (including? ....). -->
@@ -333,11 +333,11 @@ NOTE - More on large scope in AT terms? What is needed here? -->
 
 ### Constructing a game feature by feature
 
-Within the activity system of making a game, in analsis of video data and evolution of course resources from P2 onwards, I identified activity happening at an individual or pair work which emerged with disctinctive characteristics.
+Within the activity system of making a game, in analysis of video data and evolution of course resources from P2 onwards, I identified activity happening at an individual or pair work which emerged with distinctive characteristics.
 
 Activity was driven by learners setting goals, requesting help and then implement code structures based around altering or adding new features to the game using tools available in the learning environment. Participants also worked on audio and graphical assets to achieve this  objective.
 
-While is it possible, aligning with Levontev, to identify the implemenation of features as actions withing the wider activity, there is value in  treating of implementing each GDP as a sub-project or activity systems in its own right ( NOTE - or at least as as a key unit of analysis). Barab and colleagues justify smaller units in their study observing emerging practices in a technology rich learning environment [@barab_using_2002].
+While is it possible, aligning with Levontev, to identify the implementation of features as actions within the wider activity, there is value in  treating of implementing each GDP as a sub-project or activity systems in its own right ( NOTE - or at least as as a key unit of analysis). Barab and colleagues justify smaller units in their study observing emerging practices in a technology rich learning environment [@barab_using_2002].
 QUOTE?
 
 
@@ -1129,6 +1129,8 @@ My journal notes see an evolution of attempts to try to build into the program, 
 An additional rationale for this process was to help reduce potential internal bias about the kind of process that a computer programmer should adopt, echoing the call for pluralism in approaches explored earlier in our section on germ cell concept Papert and Turkle, 1990). In short, my message was to participants there are more than one way the skin a cat. When you are learning to code follow your own preferences and try to observe and reflect on what works well for you. -->
 
 
+
+
 ## Responding to tensions and barriers in cultural aspects of the game making activity
 
 ### Conflicts due to identity clashes and dysfunctional group work
@@ -1197,7 +1199,7 @@ COMPLETELY REMOVED SECTION ON PHYSICAL MAPS
 
 The introduction of a drama process was introduced in response to a the barriers to participation caused by not identifying with the culture of coding or gaming.
 
-#### A game encouraging maker / player types
+<!-- #### A game encouraging maker / player types
 
 The drama process work in P3 to develop ways to encourage diverse and playful approaches to making had its roots in a game introduced in P2 where participants took part in an interactive the Bartle test. The Bartle test draws on work which ...
 
@@ -1217,7 +1219,10 @@ This self evaluation helped confirm my own observations of different motivations
 
 The success of activity spurred the creation of the creation of side-missions to be carried out in from of a dramatic process.
 
-AND - link more
+AND - link more -->
+
+My journal notes detail an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. In and early tentative attempt to define in broad strokes the types of game maker behaviour and underlying goals, taking inspiration from Bartle's game player types [@hamari_player_2014], idenifying social makers, planners, magpies and glitchers. See appendix 4.x . I saw potential value here to address internal bias about the kind of process that a computer programmer should adopt, echoing the call for pluralism in approaches [@papert_epistemological_1990].  
+
 
 #### Description drama process using extracts from vignettes and concepts of MoE
 
